# ai-cmmt

./: .gitignore  CMMTP_Image_Analysis.ipynb  CMMTP_cell_type.ipynb  LICENSE  README.md  Result of Result of SUM_CL586_1.nd2 - CL586_1.nd2 (series 01) - C=0.tif  pyproject.toml
output/: group3.md  group4.md
